<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Infineon LPA</string>
    <string name="app_version_body">App: %1$s\nBuild type: %2$s\nVersion name: %3$s</string>
    <string name="menu_item_app_version">App version</string>
    <string name="menu_item_preferences">Preferences</string>
    <string name="menu_item_euicc_info">eUICC info</string>
    <string name="menu_item_license_info">License info</string>
    <string name="menu_item_clear_notifications">Clear notifications</string>
    <string name="menu_item_refresh_esims">Refresh eSIMs</string>
    <string name="menu_item_refresh">Refresh profiles</string>
    <string name="action_opening_reader">Opening %1$s reader…</string>
    <string name="action_getting_profiles">Getting profiles…</string>
    <string name="action_switching_profile">Switching profile…</string>
    <string name="action_disabling_profile">Disabling profile…</string>
    <string name="action_deleting_profile">Deleting profile…</string>
    <string name="action_cancel_session_heading">Cancelling profile download…</string>
    <string name="action_clearing_notifications">Clearing all pending notifications…</string>
    <string name="generic_button_ok_text">OK</string>
    <string name="generic_button_start_text">Start</string>
    <string name="generic_button_cancel_text">Cancel</string>
    <string name="generic_button_done_text">Done</string>
    <string name="profile_action_dialogue_delete_profile_heading">Delete profile?</string>
    <string name="profile_action_dialogue_disable_delete_profile_body">You\'ll immediately disconnect this device from the network.\n\nThis will not cancel your service plan.</string>
    <string name="profile_action_dialogue_switch_profile_heading">Switch profile?</string>
    <string name="profile_action_dialogue_switch_profile_body">You\'ll connect to %1$s instead of %2$s.\n\nThis will not cancel your %3$s.</string>
    <string name="profile_action_dialogue_enable_profile_heading">Enable profile?</string>
    <string name="profile_action_dialogue_enable_profile_body">You\'ll connect to %s.</string>
    <string name="profile_list_title">Infineon LPA</string>
    <string name="profile_list_available_profiles">Available Profiles</string>
    <string name="profile_list_button_add_profile_content_description">Add profile button</string>
    <string name="profile_list_button_add_profile_camera_content_description">Add profile using QR code button</string>
    <string name="profile_list_button_add_profile_manual_content_description">Add profile manually button</string>
    <string name="profile_list_button_add_profile_camera_text">Add profile using QR code</string>
    <string name="profile_list_button_add_profile_manual_text">Add profile manually</string>
    <string name="profile_list_item_profile_icon_content_description">Profile icon</string>
    <string name="profile_list_item_profile_details_icon_content_description">Profile details</string>
    <string name="profile_list_no_esim_available_icon">No eSIM available!</string>
    <string name="profile_details_title">Profile Details</string>
    <string name="profile_details_profile_icon_content_description">Provider icon</string>
    <string name="profile_details_nickname_edit_icon_content_description">Edit the profile nickname icon</string>
    <string name="profile_details_nickname_title">Nickname</string>
    <string name="profile_details_provider_title">Provider</string>
    <string name="profile_details_provider_example">Telefon</string>
    <string name="profile_details_iccid_title">ICCID</string>
    <string name="profile_details_iccid_example">98000000000000002000</string>
    <string name="profile_details_status">Status</string>
    <string name="profile_details_status_enabled">Enabled</string>
    <string name="profile_details_status_disabled">Disabled</string>
    <string name="profile_details_button_enable_text">Enable</string>
    <string name="profile_details_button_disable_text">Disable</string>
    <string name="profile_details_button_delete_text">Delete</string>
    <string name="profile_details_button_switch_text">Switch</string>
    <string name="profile_details_edit_profile_nickname_dialog_title">Edit the profile nickname</string>
    <string name="euicc_info_title">eUICC information</string>
    <string name="euicc_info_progress_getting_euicc_info">Reading eUICC information</string>
    <string name="euicc_info_eid_title">EID</string>
    <string name="euicc_info_eid_example">89034011560010000000000000000121</string>
    <string name="euicc_info_gsma_sgp_22_version_title">GSMA SGP.22 Version</string>
    <string name="euicc_info_gsma_sgp22_version_example">2.2.2</string>
    <string name="euicc_info_tca_version_title">TCA eUICC Profile Package Version</string>
    <string name="euicc_info_tca_version_example">2.2.2</string>
    <string name="euicc_info_pki_ids_title">PKI IDs</string>
    <string name="euicc_info_pki_ids_example">C0BC70BA36929D43B467FF57570530E57AB8FCD8\nF54172BDF98A95D65CBEB88A38A1C11D800A85C3</string>
    <string name="scan_qr_title">Download Profile</string>
    <string name="scan_qr_no_camera_text">No camera available</string>
    <string name="scan_qr_add_profile_with_qr_heading">Add profile with a QR code</string>
    <string name="scan_qr_add_profile_with_qr_body">If your provider gave you a QR code, scan it now by keeping the code centered in the box</string>
    <string name="scan_qr_button_use_this_code_text">Use this code</string>
    <string name="scan_qr_button_enter_manual_code_text">Enter code manually</string>
    <string name="scan_qr_camera_permission_alert_dialog_title">Camera permission required!</string>
    <string name="scan_qr_camera_permission_alert_dialog_message">To download a new profile a QR code has to be scanned.\n\nWithout the camera permission this is not possible.\n\nThis is the last request for the camera permission. If denied, the profile download functionality will not be available. You can then grant the camera permission in the Android settings anytime.</string>
    <string name="scan_qr_manual_activation_code_hint">Enter activation code manually</string>
    <string name="scan_qr_manual_activation_code_title">Activation code:</string>
    <string name="enter_activation_code_title">Enter Activation Code</string>
    <string name="enter_activation_code_heading">Enter Activation Code manually</string>
    <string name="enter_activation_code_ac_hint">Enter AC format</string>
    <string name="enter_activation_code_url_hint">Enter SMDP+ url</string>
    <string name="enter_activation_code_id_hint">Enter matching ID</string>
    <string name="enter_activation_code_text_title">Activation code:</string>
    <string name="enter_activation_code_button_use_this_code_text">Use this code</string>
    <string name="download_profile_title">Download Profile</string>
    <string name="download_profile_authenticating_heading">Authenticating profile download service…</string>
    <string name="download_profile_authenticating_body">Contacting the profile server.</string>
    <string name="download_profile_use_provider_heading">Use %s</string>
    <string name="download_profile_use_provider_body">Your %s number is ready to add to your phone</string>
    <string name="download_profile_confirmation_code_hint">Enter confirmation code</string>
    <string name="download_profile_confirmation_code_title">Confirmation code:</string>
    <string name="download_profile_downloading_heading">Downloading…</string>
    <string name="download_profile_downloading_body">Your device is downloading a profile from %s. This can take some time.</string>
    <string name="download_profile_download_complete_heading">Download complete</string>
    <string name="download_profile_download_complete_body">You\'ve downloaded a profile from %1$s.\n\nYou may need to complete an additional step to activate your service.\n\nIf you don\'t have service, contact %2$s for help.\n\nDo you want to enable your new profile?</string>
    <string name="download_profile_esim_logo_image_content_description">eSIM logo</string>
    <string name="download_profile_button_enable_new_profile">Enable new profile</string>
    <string name="download_profile_button_keep_current_profile">Keep current profile</string>
    <string name="pref_title">Preferences</string>
    <string name="pref_category_general">General settings</string>
    <string name="pref_category_se_reader">SIM slot reader settings</string>
    <string name="pref_title_select_se">Select eSIM reader</string>
    <string name="pref_title_euicc_profile_init_time">Profile initialization time (in ms)</string>
    <string name="pref_title_force_telephony_interface">Force telephony interface</string>
    <string name="pref_title_keep_active_profile">Keep active profile</string>
    <string name="pref_title_simslots_need_term_cap_cmd">Send Terminal Capability command</string>
    <string name="pref_title_trust_gsma_test_ci">Trust GSMA Test CI</string>
    <string name="pref_key_select_se">com.infineon.esim.lpa.pref.select_se</string>
    <string name="pref_key_euicc_profile_init_time">com.infineon.esim.lpa.pref.euicc_profile_init_time</string>
    <string name="pref_key_force_telephony_interface">com.infineon.esim.lpa.pref.force_telephony_interface</string>
    <string name="pref_key_keep_active_profile">com.infineon.esim.lpa.pref.keep_active_profile</string>
    <string name="pref_key_sim_slot_needs_term_cap_cmd">com.infineon.esim.lpa.pref.simslots_need_term_cap_cmd</string>
    <string name="pref_key_open_logical_channel">com.infineon.esim.lpa.pref.open_logical_channel</string>
    <string name="pref_key_trust_gsma_test_ci">com.infineon.esim.lpa.pref.trust_gsma_test_ci</string>
    <string name="pref_summary_select_se">Select the eSIM reader to be used.</string>
    <string name="pref_summary_euicc_profile_init_time">Set the duration needed for the profile initialization with an eSIM in the SIM slot.</string>
    <string name="pref_summary_force_telephony_interface">Force usage of telephony interface (if available) to communicate via modem instead of OMAPI.</string>
    <string name="pref_summary_keep_active_profile">Set if the active profile on the eSIM should always be kept. This removes the option to delete the active profile.</string>
    <string name="pref_summary_sim_slot_needs_term_cap_cmd">Send the Terminal Capability command to the reader to activate the eSIM functionality.</string>
    <string name="pref_summary_trust_gsma_test_ci">Allow to connect with SM-DP+ profile servers using certificates from GSMA Test CI.</string>
    <string name="pref_def_value_select_se" tools:ignore="Typos">NONE</string>
    <string name="pref_def_value_euicc_profile_init_time">4000</string>
    <string name="pref_def_value_force_telephony_interface">false</string>
    <string name="pref_def_value_keep_active_profile">true</string>
    <string name="pref_def_value_simslots_need_term_cap_cmd">true</string>
    <string name="pref_def_value_open_logical_channel">false</string>
    <string name="pref_def_value_trust_gsma_test_ci">true</string>
    <string name="pref_progress_refreshing_euicc_list">Refreshing reader list…</string>
    <string name="pref_progress_connecting_reader">Connecting %1$s reader…</string>
    <string name="pref_progress_disconnecting_reader">Disconnecting reader…</string>
    <string name="error_generic_heading">Ups… Something went wrong!</string>
    <string name="error_generic_body">Keep calm and contact your admin.</string>
    <string name="error_invalid_authentication_code_heading">Bad Activation Code</string>
    <string name="error_invalid_authentication_ode_body">The activation code is not valid.</string>
    <string name="error_wifi_disabled_heading">Enable Wi-Fi</string>
    <string name="error_wifi_disabled_body">You can\'t add a profile unless you first enable Wi-Fi and establish an internet connection.</string>
</resources>