<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ SPDX-FileCopyrightText: Copyright (c) 2024-2025 Infineon Technologies AG
  ~ SPDX-License-Identifier: MIT
  -->

<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent" >

    <PreferenceCategory android:title="@string/pref_category_general">
        <ListPreference
            android:title="@string/pref_title_select_se"
            android:key="@string/pref_key_select_se"
            android:summary="@string/pref_summary_select_se"
            android:defaultValue="@string/pref_def_value_select_se">
        </ListPreference>

        <CheckBoxPreference
            android:title="@string/pref_title_keep_active_profile"
            android:key="@string/pref_key_keep_active_profile"
            android:summary="@string/pref_summary_keep_active_profile"
            android:defaultValue="@string/pref_def_value_keep_active_profile">
        </CheckBoxPreference>

        <CheckBoxPreference
            android:title="@string/pref_title_simslots_need_term_cap_cmd"
            android:key="@string/pref_key_sim_slot_needs_term_cap_cmd"
            android:summary="@string/pref_summary_sim_slot_needs_term_cap_cmd"
            android:defaultValue="@string/pref_def_value_simslots_need_term_cap_cmd">
        </CheckBoxPreference>

        <CheckBoxPreference
            android:title="@string/pref_title_trust_gsma_test_ci"
            android:key="@string/pref_key_trust_gsma_test_ci"
            android:summary="@string/pref_summary_trust_gsma_test_ci"
            android:defaultValue="@string/pref_def_value_trust_gsma_test_ci">
        </CheckBoxPreference>

        <CheckBoxPreference
            android:defaultValue="@string/pref_def_value_force_telephony_interface"
            android:key="@string/pref_key_force_telephony_interface"
            android:summary="@string/pref_summary_force_telephony_interface"
            android:title="@string/pref_title_force_telephony_interface">
        </CheckBoxPreference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_se_reader">
        <EditTextPreference
            android:title="@string/pref_title_euicc_profile_init_time"
            android:key="@string/pref_key_euicc_profile_init_time"
            android:summary="@string/pref_summary_euicc_profile_init_time"
            android:defaultValue="@string/pref_def_value_euicc_profile_init_time">
        </EditTextPreference>
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>