<!--
  ~ SPDX-FileCopyrightText: Copyright (c) 2024-2025 Infineon Technologies AG
  ~ SPDX-License-Identifier: MIT
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.android.infineon.lpa.com.infineon.esim.lpa.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/menu_item_preferences"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_app_version"
        android:orderInCategory="200"
        android:title="@string/menu_item_app_version"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_euicc_info"
        android:orderInCategory="300"
        android:title="@string/menu_item_euicc_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_license_info"
        android:orderInCategory="400"
        android:title="@string/menu_item_license_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear_notifications"
        android:orderInCategory="500"
        android:title="@string/menu_item_clear_notifications"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_refresh_esims"
        android:orderInCategory="900"
        android:title="@string/menu_item_refresh_esims"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_refresh_profile_list"
        android:orderInCategory="900"
        android:title="@string/menu_item_refresh"
        app:showAsAction="never"/>
</menu>
