<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ SPDX-FileCopyrightText: Copyright (c) 2024-2025 Infineon Technologies AG
  ~ SPDX-License-Identifier: MIT
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/euicc_info_eid_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:textIsSelectable="true"
            />

        <TextView
            android:id="@+id/text_eid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/euicc_info_eid_example"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textIsSelectable="true"
            />

        <Space
            android:layout_height="20dp"
            android:layout_width="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/euicc_info_gsma_sgp_22_version_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:textIsSelectable="true"
            />


        <TextView
            android:id="@+id/text_gsma_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/euicc_info_gsma_sgp22_version_example"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textIsSelectable="true"
            />

        <Space
            android:layout_height="20dp"
            android:layout_width="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/euicc_info_tca_version_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:textIsSelectable="true"
            />

        <TextView
            android:id="@+id/text_tca_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/euicc_info_tca_version_example"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textIsSelectable="true"
            />

        <Space
            android:layout_height="20dp"
            android:layout_width="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/euicc_info_pki_ids_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:textIsSelectable="true"
            />

        <TextView
            android:id="@+id/text_pki_ids"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/euicc_info_pki_ids_example"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:typeface="monospace"
            android:textIsSelectable="true"
            />

    </LinearLayout>
</ScrollView>
