<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ SPDX-FileCopyrightText: Copyright (c) 2024-2025 Infineon Technologies AG
  ~ SPDX-License-Identifier: MIT
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">


    <ImageView
        android:id="@+id/image_profile_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="0dp"
        android:background="@null"
        android:src="@drawable/profile_default"
        android:contentDescription="@string/profile_list_item_profile_icon_content_description" />

    <RelativeLayout
        android:id="@+id/relative_layout_profile_info"
        android:layout_toEndOf="@+id/image_profile_icon"
        android:layout_toStartOf="@id/image_profile_details_icon"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_provider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_details_provider_example"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            />

        <TextView
            android:id="@+id/text_profile_list_item_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_details_status_enabled"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <ImageView
        android:id="@+id/image_profile_details_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:background="@null"
        android:clickable="true"
        android:focusable="false"
        android:padding="5dp"
        android:src="@drawable/icon_gear"
        android:contentDescription="@string/profile_list_item_profile_details_icon_content_description" />
</RelativeLayout>