<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ SPDX-FileCopyrightText: Copyright (c) 2024-2025 Infineon Technologies AG
  ~ SPDX-License-Identifier: MIT
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.infineon.esim.lpa.ui.downloadProfile.DownloadActivity">

    <ImageView
        android:id="@+id/image_profile_icon"
        android:layout_width="150dp"
        android:layout_height="85dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/esim_logo"
        android:contentDescription="@string/download_profile_esim_logo_image_content_description" />

    <TextView
        android:id="@+id/text_heading"
        android:layout_below="@+id/image_profile_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:text="@string/download_profile_authenticating_heading"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_body"
        android:layout_below="@+id/text_heading"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:text=""
        android:textAlignment="center"
        />

    <ProgressBar
        android:id="@+id/progress"
        style="@android:style/Widget.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        />

    <TextView
        android:id="@+id/textViewDownloadInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progress"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:text=""
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/holo_blue_dark"
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/text_error_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewDownloadInfo"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:text=""
        android:textAlignment="textStart"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/holo_red_dark"
        android:textIsSelectable="true" />

    <Button
        android:id="@+id/button_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_margin="20dp"
        android:enabled="true"
        android:text="@string/generic_button_cancel_text"
        android:visibility="invisible"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/button_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:enabled="true"
        android:text="@string/generic_button_start_text"
        android:textAllCaps="false"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/text_confirmation_code_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/download_profile_confirmation_code_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edit_confirmation_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_confirmation_code_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:autofillHints="password"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:hint="@string/download_profile_confirmation_code_hint"
        android:inputType="text" />
</RelativeLayout>
